2003-01-11 Mo DeJong  <mdejong@uncounted.org>

	* etc/sn_cmp_g.pat: Add pattern to match a
	Win32 filename like d:/filename.c:856.
	* gui/grep.tcl (sn_goto_comp_error_or_grep):
	Remove hack to match a win32 path name
	like d:/filename.c:856, use regexp instead.
	* tests/gui/grep.test: Add path name test
	cases for sn_goto_comp_error_or_grep.

2002-11-27  Mo DeJong  <mdejong@uncounted.org>

	Added SN-512-2002-11-27 tag.

2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* patches/libgui_print.patch: Add patch
	for libgui that fixes Win32 printing crash.

2002-11-26  Mo DeJong  <mdejong@uncounted.org>

	* gui/Makefile.am: Add winprint.tcl.
	* gui/Makefile.in: Regen.
	* gui/editorpane.tcl (print_file): Don't
	attempt to delete a printer dialog object
	if it does not exist. This fixes a problem
	printing the grep pane under Windows.
	* gui/tclIndex: Regen.
	* gui/winprint.tcl: Resurrect windows
	printing file that was erroneously removed
	on 2000-05-26. These methods are used
	by the utilities.tcl file.

2002-11-25  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.am: Ignore doc subdir.
	* Makefile.in: Regen.
	* README.TXT: Mention sourceforge URL
 	for online docs.
	* configure: Regen.
	* configure.in: Don't generate Makefiles
	in doc subdir.
	* mkdist.sh: Don't copy doc subdir.
	* gui/multiview.tcl (AddHelpMenu):
	Open sourceforge online docs. The
	existing documentation is corrupted
	so leave them out of the distribution.

2002-11-25  Mo DeJong  <mdejong@uncounted.org>

	* gui/retriever.tcl (destructor, window_deleted):
	Fixup window deletion by setting the window
	var to "" when it is deleted by the user.

2002-11-24  Mo DeJong  <mdejong@uncounted.org>

	* configure: Regen.
	* configure.in:
	* mkdist.sh: Update version number
	to 5.1.2.

2002-11-24  Mo DeJong  <mdejong@uncounted.org>

	* gui/multiview.tcl (toolbar_post_scope_menu):
	Fix state of Related, All, All, and None buttons
	inside the symbol combo to match the comments
	and the documentation.